@@ -5,7 +5,7 @@ abc2midi version 3.10 June 07 2013
 abc2abc  version 1.74 April 21 2013
 yaps     version 1.54 April 21 2013
 abcmatch version 1.56 June 09 2013
-midicopy version 1.17 Sept 15 2013
+midicopy version 1.18 October 01 2013
 
 24th January 2002
 
@@ -14,7 +14,7 @@ J.R.Allwright@westminster.ac.uk
 University of Westminster,
 London, UK
 
-September 2013
+October 2013
 
 Seymour Shlien
 seymour.shlien@crc.ca
