@@ -173,7 +173,7 @@ C
 
 March
 6/8
-8 3
+6 3
 110 1.10
 70 0.95
 80 0.95
